asentry project page - link to video demo

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -37,6 +37,8 @@ using a <a href="https://www.raspberrypi.com/documentation/microcontrollers/rasp
 and <a href="https://circuitpython.org/">CircuitPython</a>.
 This is a description of how it’s made.</p>
 
+<aside><p><a href="https://www.youtube.com/live/_rcwBbP3TsU?si=Bhfe6zcqiE0uyJwu&t=610">Click here for a video demo</a> (Adafruit Show & Tell livestream)</p></aside>
+
 <p>Source code and design files for this project are available <a href="https://github.com/Len42/asentry-gadget">on GitHub.</a></p>
 
 <p>This device is <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">based on a project</a> by
