--- a/site-files/index.html
+++ b/site-files/index.html
@@ -78,6 +78,7 @@
 </dl>
 
 <h1><a name="misc"></a>Other Stuff</h1>
+<aside><img src="assets/mini-200.jpg" alt="Berond"></aside>
 <dl>
     <dt><a href="https://www.worldanvil.com/w/earthship-ark-lenp">Earthship Ark</a></dt>
     <dd>World-building for an RPG campaign based on
