Synth: Add Attenuator page

--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -102,7 +102,7 @@ project and source file.</p>
 
 <h1><a name="misc"></a>Not Modules</h1>
 <dl>
-    <dt><a href="https://github.com/Len42/Synth/tree/main/misc/Attenuator#readme">Attenuator</a></dt>
+    <dt><a href="attenuator/">Attenuator</a></dt>
     <dd>Simple attenuator dongle</dd>
     <dt><a href="https://github.com/Len42/Synth/tree/main/misc/Power-Supply#readme">Power Supply</a></dt>
     <dd>Eurorack power supply using a laptop charger</dd>
