--- a/site-files/index.html
+++ b/site-files/index.html
@@ -11,7 +11,7 @@
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Len’s Stuff</h1>
-<p>It’s gonna be the future soon</p>
+<p>Some new disaster</p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
