change min-width for large-screen formatting

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -26,7 +26,10 @@
 </header>
 
 <main>
-<aside><a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a></aside>
+<aside>
+<a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a>
+<p><a href="https://www.youtube.com/live/_rcwBbP3TsU?si=Bhfe6zcqiE0uyJwu&t=610">Click here for a video demo</a> (Adafruit Show & Tell livestream)</p>
+</aside>
 
 <h1><a name="overview"></a>Overview</h1>
 <p>Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
@@ -37,7 +40,6 @@ using a <a href="https://www.raspberrypi.com/documentation/microcontrollers/rasp
 and <a href="https://circuitpython.org/">CircuitPython</a>.
 This is a description of how it’s made.</p>
 
-<aside><p><a href="https://www.youtube.com/live/_rcwBbP3TsU?si=Bhfe6zcqiE0uyJwu&t=610">Click here for a video demo</a> (Adafruit Show & Tell livestream)</p></aside>
 
 <p>Source code and design files for this project are available <a href="https://github.com/Len42/asentry-gadget">on GitHub.</a></p>
 
