--- a/site-files/index.html
+++ b/site-files/index.html
@@ -66,7 +66,7 @@
 
 <h2>Software Utilities</h2>
 <dl>
-    <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a></dt>
+    <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a> (software version)</dt>
     <dd>Program to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats.</dd>
     <dt><a href="https://github.com/Len42/NetToBOM/#readme-ov-file">NetToBOM</a></dt>
     <dd>This is my <a href="https://www.kicad.org/">KiCad</a> BOM plug-in. There are many like it but this one is mine.</dd>
