Synth PSU page - wip

--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -104,7 +104,7 @@ project and source file.</p>
 <dl>
     <dt><a href="attenuator/">Attenuator</a></dt>
     <dd>Simple attenuator dongle</dd>
-    <dt><a href="https://github.com/Len42/Synth/tree/main/misc/Power-Supply#readme">Power Supply</a></dt>
+    <dt><a href="power-supply/">Power Supply</a></dt>
     <dd>Eurorack power supply using a laptop charger</dd>
     <dt><a href="grounding-plug.html">Grounding Plug</a></dt>
     <dd>Something you probably don’t need</dd>
