Better formatting of <aside> sidebars

--- a/site-files/index.html
+++ b/site-files/index.html
@@ -29,10 +29,8 @@
 <h1><a name="projects"></a>Projects</h1>
 <p>I have published many of my software and hardware projects on <a href="https://github.com/Len42">GitHub</a>.</p>
 
-<aside>
-<figure><a href="synth/"><img src="assets/synth-photo.jpg" alt="Modular synthesizer"></a></figure>
-<figure><a href="projects/asentry/"><img src="assets/asentry-photo.jpg" alt="asentry device"></a></figure>
-</aside>
+<aside><a href="synth/"><img src="assets/synth-photo.jpg" alt="Modular synthesizer"></a></aside>
+<aside><a href="projects/asentry/"><img src="assets/asentry-photo.jpg" alt="asentry device"></a></aside>
 
 <h2>Recent Projects</h2>
 <dl>
