--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -26,10 +26,9 @@
 </header>
 
 <main>
-<aside>
-<a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a>
-<p><a href="https://www.youtube.com/live/_rcwBbP3TsU?si=Bhfe6zcqiE0uyJwu&t=610">Click here for a video demo</a> (Adafruit Show & Tell livestream)</p>
-</aside>
+<aside><a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a></aside>
+<aside><p>There's a video demo
+<a href="https://www.youtube.com/live/_rcwBbP3TsU?si=Bhfe6zcqiE0uyJwu&t=610">here (Adafruit Show & Tell livestream)</a></p></aside>
 
 <h1><a name="overview"></a>Overview</h1>
 <p>Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
