--- a/site-files/synth/dexy/hardware.html
+++ b/site-files/synth/dexy/hardware.html
@@ -2,6 +2,8 @@
 <html lang="en-CA">
 <head>
 <title>Hardware - Dexy - Len’s Stuff</title>
+<meta name="author" content="Len Popp">
+<link rel="license" href="#license">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../css/site.css">
