--- a/site-files/projects/ledclock/index.html
+++ b/site-files/projects/ledclock/index.html
@@ -46,9 +46,9 @@ Since the display has only four digits, this clock doesn’t have fancy text men
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
 </g-col>
-<g-col>© 2010, 2024 Len Popp<br>
+<g-col><div id="license">© 2010, 2024 Len Popp<br>
 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-</g-col></g-row></footer>
+</div></g-col></g-row></footer>
 
 </body>
 </html>
