--- a/site-files/synth/attenuator/index.html
+++ b/site-files/synth/attenuator/index.html
@@ -70,7 +70,7 @@ but I just wanted something small and simple that would leave the attenuverter f
 <g-col style="vertical-align: middle">
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a><br>
-© 2023-2024 Len Popp. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</g-col>
+<div id="license">© 2023-2024 Len Popp. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</div></g-col>
 </g-row></footer>
 
 
