--- a/site-files/synth/eurorack-bus-cv-gate.html
+++ b/site-files/synth/eurorack-bus-cv-gate.html
@@ -67,9 +67,9 @@ Note the underline indicating the enabled position.</figcaption>
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
 </g-col>
-<g-col>© 2022-2024 Len Popp<br>
+<g-col><div id="license">© 2022-2024 Len Popp<br>
 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-</g-col></g-row></footer>
+</div></g-col></g-row></footer>
 
 </body>
 </html>
