--- a/site-files/synth/grounding-plug.html
+++ b/site-files/synth/grounding-plug.html
@@ -50,8 +50,8 @@ It’s simply a 1/8" plug with the signal (tip contact) connected to ground (sle
             <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
         </g-col>
         <g-col>
-            © 2024 Len Popp<br>
-            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+            <div id="license">© 2024 Len Popp<br>
+            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</div>
         </g-col>
     </g-row>
 </footer>
