--- a/site-files/synth/index.html
+++ b/site-files/synth/index.html
@@ -123,8 +123,8 @@ project and source file.</p>
             <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
         </g-col>
         <g-col>
-            © 2022-2024 Len Popp<br>
-            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+            <div id="license">© 2022-2024 Len Popp<br>
+            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</div>
         </g-col>
     </g-row>
 </footer>
