add <meta>data to all pages (#8)
add <meta>data to all pages

--- a/site-files/index.html
+++ b/site-files/index.html
@@ -2,6 +2,8 @@
 <html lang="en-CA">
 <head>
 <title>Len’s Stuff</title>
+<meta name="author" content="Len Popp">
+<link rel="license" href="#license">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/site.css">
@@ -90,9 +92,13 @@
 </dl>
 </main>
 
-<footer>
-<p>© 2024 Len Popp</p>
-</footer>
+<footer><g-row><g-col style="width: 110px; vertical-align: middle">
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+<img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
+</g-col>
+<g-col><div id="license">© 2024 Len Popp<br>
+This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+</div></g-col></g-row></footer>
 
 </body>
 </html>
