--- a/site-files/synth/part-selection.html
+++ b/site-files/synth/part-selection.html
@@ -2,6 +2,8 @@
 <html lang="en-CA">
 <head>
 <title>Component Selection - Len’s Stuff</title>
+<meta name="author" content="Len Popp">
+<link rel="license" href="#license">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../css/site.css">
@@ -106,8 +108,8 @@ are a matter of taste. They also need to fit the selected potentiometers
             <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
         </g-col>
         <g-col>
-            © 2022-2024 Len Popp<br>
-            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+            <div id="license">© 2022-2024 Len Popp<br>
+            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</div>
         </g-col>
     </g-row>
 </footer>
