--- a/site-files/dev/rp2040-adc-accuracy.html
+++ b/site-files/dev/rp2040-adc-accuracy.html
@@ -2,6 +2,8 @@
 <html lang="en-CA">
 <head>
 <title>RP2040 ADC Accuracy - Len’s Stuff</title>
+<meta name="author" content="Len Popp">
+<link rel="license" href="#license">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../css/site.css">
@@ -69,9 +71,9 @@
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
 </g-col>
-<g-col>© 2022-2024 Len Popp<br>
+<g-col><div id="license">© 2022-2024 Len Popp<br>
 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-</g-col></g-row></footer>
+</div></g-col></g-row></footer>
 
 </body>
 </html>
