--- a/site-files/projects/toybot/index.html
+++ b/site-files/projects/toybot/index.html
@@ -2,6 +2,8 @@
 <html lang="en-CA">
 <head>
 <title>ToyBot - Len’s Stuff</title>
+<meta name="author" content="Len Popp">
+<link rel="license" href="#license">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../css/site.css">
@@ -90,9 +92,9 @@ With the Motor Shield it’s usually a good idea to use separate power supplies 
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a>
 </g-col>
-<g-col>© 2009, 2022 Len Popp<br>
+<g-col><div id="license">© 2009, 2022 Len Popp<br>
 This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-</g-col></g-row></footer>
+</div></g-col></g-row></footer>
 
 </body>
 </html>
