--- a/site-files/synth/dexy/software.html
+++ b/site-files/synth/dexy/software.html
@@ -2,6 +2,8 @@
 <html lang="en-CA">
 <head>
 <title>DexyPatch - Len’s Stuff</title>
+<meta name="author" content="Len Popp">
+<link rel="license" href="#license">
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../css/site.css">
@@ -68,10 +70,10 @@
             <img src="../../assets/osi-logo.png" width=58 height=75 />
         </g-col>
         <g-col style="vertical-align: middle">
-            <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+            <div id="license"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
                 <img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons Licence"/></a><br>
             © 2023-2024 Len Popp. This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-        </g-col>
+        </div></g-col>
     </g-row>
 </footer>
 
