Add list of presentations

--- a/site-files/presentations/index.html
+++ b/site-files/presentations/index.html
@@ -13,7 +13,7 @@
 <hgroup>
 <a href="/"><img src="/assets/logo.jpg" class="logo" alt="home"></a>
 <h1>Presentations</h1>
-<!-- <p>Subtitle</p> -->
+<p><!-- Subtitle --></p>
 </hgroup>
 <nav>
 <!--nav button--><label for="navCheck">&nbsp;</label><input type="checkbox" id="navCheck">
