--- a/site-files/index.html
+++ b/site-files/index.html
@@ -56,6 +56,7 @@
 </dl>
 
 <h1><a name="programming"></a>Programming</h1>
+<aside><img src="assets/code-sidebar.jpg" alt="source code screenshot"></aside>
 <dl>
     <dt><a href="dev/rp2040-dev-setup.html">RP2040 Windows Development Setup</a></dt>
     <dd>How to set up a C/C++ development environment for the <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html">Raspberry Pi Pico</a> and other RP2040 dev boards on Windows</dd>
