Synth: part-selection.html: better info about capacitors

--- a/site-files/synth/part-selection.html
+++ b/site-files/synth/part-selection.html
@@ -66,10 +66,10 @@ unless otherwised noted.</p>
 
 <p>Decoupling caps for ICs are 100 nF ceramic, any make.</p>
 
-<p>Capacitors in the audio signal path are specified as either film types for
-larger capacitance values, or high-quality ceramic caps (C0G, NP0) for small
-values.</p>
-
+<p>Capacitors in the audio signal path are specified as either electrolytic for
+large-value coupling caps, film type for medium values, or high-quality ceramic
+caps (C0G, NP0) for small values.</p>
+    
 <p>There are a few places where film capacitors with high stability and low
 leakage are required. These are noted on the schematic.</p>
 
