--- a/site-files/presentations/index.html
+++ b/site-files/presentations/index.html
@@ -25,13 +25,18 @@
 </header>
 
 <main>
+    <p><em>Note: The PDF versions of these presentations may have some ugly formatting. Sorry!</em></p>
     <dl>
-        <dt><a href="https://github.com/Len42/presentations/blob/main/TaskScheduler/TaskScheduler.pdf?raw=1">
-            A Simple Task Scheduler For Microcontrollers</a></dt>
-        <dd>Demonstrates some “modern” C++ techniques</dd>
-        <dt><a href="https://github.com/Len42/presentations/blob/main/MakeVersionInfo/MakeVersionInfo.pdf?raw=1">
-            Automatic Build Version Numbering</a></dt>
-        <dd>Version numbers are fun!</dd>
+        <dt>A Simple Task Scheduler For Microcontrollers</dt>
+        <dd>Demonstrates some “modern” C++ techniques
+            [<a href="https://github.com/Len42/presentations/blob/main/TaskScheduler/TaskScheduler.pdf?raw=1">PDF</a>]
+            [<a href="https://github.com/Len42/presentations/blob/main/TaskScheduler/TaskScheduler.pptx?raw=1">PowerPoint</a>]
+        </dd>
+        <dt>Automatic Build Version Numbering</dt>
+        <dd>Version numbers are fun!
+            [<a href="https://github.com/Len42/presentations/blob/main/MakeVersionInfo/MakeVersionInfo.pdf?raw=1">PDF</a>]
+            [<a href="https://github.com/Len42/presentations/blob/main/MakeVersionInfo/MakeVersionInfo.pptx?raw=1">PowerPoint</a>]
+        </dd>
     </dl>
 </main>
 
