Synth: dat-ting module - wip

--- a/site-files/synth/dat-ting/index.html
+++ b/site-files/synth/dat-ting/index.html
@@ -32,7 +32,7 @@
 
 <aside><a href="dat-ting.jpg"><img src="dat-ting.jpg" alt="dat-ting module"></a></aside>
 
-<p><em>dat-ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module using a <a href="https://electro-smith.com/products/daisy-seed">Daisy Seed</a>. It is inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.</p>
+<p><em>dat-ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module using a <a href="https://electro-smith.com/products/daisy-seed">Daisy Seed</a>, inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.</p>
 
 <h1><a name="intro"></a>Intro</h1>
 <p>Introduction.</p>
