Synth: dat-ting module - wip

--- a/site-files/synth/dat-ting/index.html
+++ b/site-files/synth/dat-ting/index.html
@@ -33,10 +33,11 @@
 
 <aside><a href="dat-ting.jpg"><img src="dat-ting.jpg" alt="dat-ting module"></a></aside>
 
-<p><em>dat-ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module using a <a href="https://electro-smith.com/products/daisy-seed">Daisy Seed</a>, inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.</p>
+<p><em>dat-ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.
+It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Electrosmith Daisy Seed</a> microcontroller board.
+</p>
 
-It is part of my <a href="..">homebrew Eurorack synthesizer</a>.
-Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.
+<p>This module is part of my <a href="..">homebrew Eurorack synthesizer</a>. Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.</p>
 
 <h1><a name="programs"></a>Programs</h1>
 <p><em>dat-ting</em> can run a variety of programs. It can act as a sound source, an audio processor, or a CV processor. Available programs include:</p>
@@ -47,7 +48,7 @@ Hardware and software are open source. GitHub repository is <a href="https://git
 <li>Reverb</li>
 <li>Bitcrusher</li>
 <li>Quantizer</li>
-<li>and whatever else I feel like writing firmware for!</li>
+<li>and anything else I feel like writing firmware for!</li>
 </ul>
 <img src="oled-menu.jpg" alt="bitcrusher display">
 <img src="oled-quant.jpg" alt="bitcrusher display">
