Synth: dat-ting module - wip

--- a/site-files/synth/dat-ting/index.html
+++ b/site-files/synth/dat-ting/index.html
@@ -48,15 +48,24 @@ It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Elect
 <li>Reverb</li>
 <li>Bitcrusher</li>
 <li>Quantizer</li>
-<li>and anything else I feel like writing firmware for!</li>
+<li>anything else I feel like writing firmware for!</li>
 </ul>
-<img src="oled-menu.jpg" alt="bitcrusher display">
-<img src="oled-quant.jpg" alt="bitcrusher display">
-<img src="oled-vco.jpg" alt="bitcrusher display">
+<div>
+<img src="oled-menu.jpg" alt="menu display">
+<img src="oled-quant.jpg" alt="quantizer display">
+<img src="oled-vco.jpg" alt="vco display">
 <img src="oled-crush.jpg" alt="bitcrusher display">
+</div>
 
 <h1><a name="features"></a>Features</h1>
-<p>TODO</p>
+<ul>
+<li>Rotary encoder and OLED display for menus and animations</li>
+<li>Audio: Mono input, stereo outputs</li>
+<li>CV/Gate: 2 bipolar inputs, 2 unipolar outputs</li>
+<li>Potentiometer for adjusting various parameters</li>
+<li>Pushbutton for trigger/gate, tap tempo, or whatever</li>
+<li>Audio processing is done by a <a href="https://electro-smith.com/products/daisy-seed">Daisy Seed</a> microcontroller/DSP board</li>
+</ul>
 
 <h1><a name="hardware"></a><a href="hardware.html">Hardware</a></h1>
 
