oops missing some <p>

--- a/site-files/synth/dexy/index.html
+++ b/site-files/synth/dexy/index.html
@@ -38,8 +38,8 @@
 
 <p>It has pitch and timbre modulation, onboard patch storage, and a USB connection that talks to custom patch editing software.</p>
 
-Dexy is part of my <a href="..">homebrew Eurorack synthesizer</a>.
-Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/Dexy">here</a>.
+<p>Dexy is part of my <a href="..">homebrew Eurorack synthesizer</a>.
+Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/Dexy">here</a>.</p>
 
 <h1><a name="features"></a>Features</h1>
 <ul>
@@ -71,9 +71,9 @@ Hardware and software are open source. GitHub repository is <a href="https://git
 <p>There are some <a href="https://github.com/Len42/Dexy/tree/main/patches">patchbank files here</a>. A patchbank can be downloaded to the Dexy module using the <a href="software.html">DexyPatch software</a>.</p>
 
 <h1><a name="license"></a>License</h1>
-The Dexy module is open source hardware.
+<p>The Dexy module is open source hardware.
 The hardware design is published under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
-Firmware and software are published under the <a href="https://github.com/Len42/Dexy/blob/main/firmware/LICENSE">MIT license</a>.
+Firmware and software are published under the <a href="https://github.com/Len42/Dexy/blob/main/firmware/LICENSE">MIT license</a>.</p>
 
 </main>
 
