Synth: dat-ting module - wip

--- a/site-files/synth/dat-ting/index.html
+++ b/site-files/synth/dat-ting/index.html
@@ -34,9 +34,8 @@
 <aside><a href="dat-ting.jpg"><img src="dat-ting.jpg" alt="dat-ting module"></a></aside>
 
 <p><em>dat-ting</em> is a 10HP multi-function <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> DSP module inspired by <a href="https://www.expert-sleepers.co.uk/disting.html">dis ting</a>.
-It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Electrosmith Daisy Seed</a> microcontroller board.
-</p>
-
+It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Electrosmith Daisy Seed</a> microcontroller board.</p>
+    
 <p>This module is part of my <a href="..">homebrew Eurorack synthesizer</a>. Hardware and software are open source. GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.</p>
 
 <h1><a name="programs"></a>Programs</h1>
@@ -70,6 +69,11 @@ It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Elect
 <h1><a name="hardware"></a><a href="hardware.html">Hardware</a></h1>
 
 <h1><a name="firmware"></a><a href="firmware.html">Firmware</a></h1>
+
+<h1><a name="license"></a>License</h1>
+<p>The <em>dat-ting</em> module is open source hardware.
+The hardware design is published under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
+Firmware and software are published under the <a href="https://github.com/Len42/Dexy/blob/main/firmware/LICENSE">MIT license</a>.</p>
 
 </main>
 
