Synth: dat-ting module - hardware page

--- a/site-files/synth/dat-ting/index.html
+++ b/site-files/synth/dat-ting/index.html
@@ -58,7 +58,7 @@ It’s based on an <a href="https://electro-smith.com/products/daisy-seed">Elect
 
 <h1><a name="features"></a>Features</h1>
 <ul>
-<li>Rotary encoder and OLED display for menus and animations</li>
+<li>Rotary encoder and OLED display for program and parameter selection (and fun animations)</li>
 <li>Audio: Mono input, stereo outputs</li>
 <li>CV/Gate: 2 bipolar inputs, 2 unipolar outputs</li>
 <li>Potentiometer for adjusting various parameters</li>
