--- a/site-files/synth/dat-ting/hardware.html
+++ b/site-files/synth/dat-ting/hardware.html
@@ -45,20 +45,58 @@ Hardware and software are open source. GitHub repository is <a href="https://git
     STM32 ARM Cortex-M7</a> microcontroller</li>
 <li>Inputs: 1 x audio, 2 x CV/gate</li>
 <li>Outputs: 2 x audio, 2 x CV/gate</li>
-<li>TODO</li>
+<li>Rotary encoder and OLED display for microcontroller UI</li>
+<li>Multi-purpose pushbutton and potentiometer</li>
+<li>USB connection for firmware download and debugging</li>
 </ul>
 
 <h1><a name="notes"></a>Notes</h1>
-<p>TODO</p>
+<p>Please note that I am a hobbyist, not a trained electronics engineer. No guarantees!</p>
+
+<p><em>dat-ting</em> is open source hardware. The hardware design is
+published under the <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
+Firmware is published under the <a href="https://github.com/Len42/dat-ting/blob/main/firmware/LICENSE">MIT license</a>.</p>
+
+<p>This module requires a 10-pin Eurorack power cable.
+The microcontroller board is powered by either the USB connection or the Eurorack +12 V supply, whichever is turned on. (It’s OK to have both plugged in at the same time.)</p>
+
+<p>An OLED display and a rotary encoder are used for a user interface to the microcontroller, and to display fun animations.</p>
+
+<p>For the USB connection, I have the USB cable running through a hole in the front panel and a right-angle adapter to the Daisy Seed. It looks a bit janky and it’s hard to plug and unplug but it works.</p>
+
+<aside><a href="board.jpg"><img src="board.jpg" alt="dat-ting PCB"></a></aside>
+
+<h2>CV In &amp; Out</h2>
+<p>There’s an important difference between the control voltage inputs and outputs on this module.
+The CV inputs are <em>bipolar,</em> meaning they can accept a positive or negative input voltage, but the CV outputs are <em>unipolar,</em> only able to produce positive voltages (0 V to +10 V nominal).</p>
+
+<p>The reason for this is the microcontroller’s DAC (digital-to-analog converter) is less precise than its ADC (analog-to-digital converter). The DAC only has 12 bits of precision, which is barely enough to produce a precise one-volt-per-octave pitch CV over 10 octaves. The ADC, on the other hand, produces 16-bit results, which is enough to give good precision over the entire input voltage range.</p>
+
+<p>I want the module to be able to handle volt-per-octave input and output with reasonable precision, so I sacrificed the ability to produce bipolar CV output in order to get good pitch tracking.</p>
+
+<p>The input and output op-amp stages use precision resistors, which should help with CV accuracy.</p>
 
 <h1><a name="pcbs"></a>PCBs</h1>
-<p>TODO</p>
+<p>PCB layouts are provided in <a href="https://www.kicad.org/">KiCad</a> and <a href="https://en.wikipedia.org/wiki/Gerber_format">gerber</a> formats, <a href="https://github.com/Len42/dat-ting/tree/main/hardware">on GitHub</a>. A PCB layout for a drilled front panel (with no labels) is also included.</p>
+
+<p>The PCBs that I designed for this module can be ordered from <a href="https://oshpark.com/profiles/Len">OSH Park</a>:</p>
+<ul>
+    <li>TODO</li>
+<li><a href="https://oshpark.com/shared_projects/zzz">Main board</a></li>
+<li><a href="https://oshpark.com/shared_projects/zzz">Controls board</a></li>
+<li><a href="https://oshpark.com/shared_projects/zzz">Front panel</a></li>
+</ul>
 
 <h1><a name="schematic"></a>Schematic</h1>
-<p>TODO</p>
+<p>PDF version is <a href="schematic.pdf">here</a>. KiCad files are <a href="https://github.com/Len42/dat-ting/tree/main/hardware">on GitHub</a>.</p>
+
+<g-row>
+<g-col><a href="schematic1.png"><img src="schematic1.png" alt="schematic page 1"></a></g-col>
+<g-col><a href="schematic2.png"><img src="schematic2.png" alt="schematic page 2"></a></g-col>
+</g-row>
 
 <h1><a name="tools"></a>Software Used</h1>
-<p>TODO</p>
+<p><a href="https://www.kicad.org/">KiCad</a> 8.0.5</p>
 
 </main>
 
