Synth: dat-ting module - firmware page - wip

--- a/site-files/synth/dat-ting/hardware.html
+++ b/site-files/synth/dat-ting/hardware.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
-<title>dat-ting Hardware - Len’s Stuff</title>
+<title>Hardware -dat-ting - Len’s Stuff</title>
 <meta name="author" content="Len Popp">
 <link rel="license" href="#license">
 <meta charset="utf-8">
