--- a/site-files/synth/dat-ting/hardware.html
+++ b/site-files/synth/dat-ting/hardware.html
@@ -68,7 +68,7 @@ The microcontroller board is powered by either the USB connection or the Eurorac
 
 <h2>CV In &amp; Out</h2>
 <p>There’s an important difference between the control voltage inputs and outputs on this module.
-The CV inputs are <em>bipolar,</em> meaning they can accept a positive or negative input voltage, but the CV outputs are <em>unipolar,</em> only able to produce positive voltages (0 V to +10 V nominal).</p>
+The CV inputs are bipolar, meaning they can accept a positive or negative input voltage, but the CV outputs are unipolar, only able to produce positive voltages (0 V to +10 V nominal).</p>
 
 <p>The reason for this is the microcontroller’s DAC (digital-to-analog converter) is less precise than its ADC (analog-to-digital converter). The DAC only has 12 bits of precision, which is barely enough to produce a precise one-volt-per-octave pitch CV over 10 octaves. The ADC, on the other hand, produces 16-bit results, which is enough to give good precision over the entire input voltage range.</p>
 
