--- a/site-files/synth/dat-ting/hardware.html
+++ b/site-files/synth/dat-ting/hardware.html
@@ -87,6 +87,8 @@ The CV inputs are bipolar, meaning they can accept a positive or negative input 
 <li><a href="https://oshpark.com/shared_projects/zzz">Front panel</a></li>
 </ul>
 
+<p><a href="https://github.com/Len42/dat-ting/blob/main/hardware/bom.csv">A parts list is here.</a></p>
+
 <h1><a name="schematic"></a>Schematic</h1>
 <p>PDF version is <a href="schematic.pdf">here</a>. KiCad files are <a href="https://github.com/Len42/dat-ting/tree/main/hardware">on GitHub</a>.</p>
 
