Synth: dat-ting module - firmware page - wip

--- a/site-files/synth/dat-ting/firmware.html
+++ b/site-files/synth/dat-ting/firmware.html
@@ -85,16 +85,17 @@ If you like menu-diving, you’ll love this module!</p>
     <li><a href="https://github.com/electro-smith/libDaisy">libDaisy</a> 7.1.0</li>
     <li><a href="https://github.com/electro-smith/DaisySP">DaisySP</a> 1.0.0</li>
     </ul>
-<li>GNU Make <em>(Included in the
+<li><a href="https://www.gnu.org/software/make/">GNU Make</a> <em>(Included in the
     <a href="https://github.com/electro-smith/DaisyWiki/wiki/1.-Setting-Up-Your-Development-Environment#1-Install-the-Toolchain">Daisy toolchain installer</a>
     for Windows)</em></li>
-<li>dfu-util <em>(Included in the
+<li><a href="https://dfu-util.sourceforge.net/">dfu-util</a> <em>(Included in the
     <a href="https://github.com/electro-smith/DaisyWiki/wiki/1.-Setting-Up-Your-Development-Environment#1-Install-the-Toolchain">Daisy toolchain installer</a>
     )</em></li>
-<li>TODO: LINKS GCC for Arm 13.3.1
+<li><a href="https://developer.arm.com/downloads/-/arm-gnu-toolchain-downloads">GCC for Arm</a> 13.3.1
     <em>(Note: This is a newer version than the one in the toolchain installer)</em></li>
-<li>Python 3.12.2</li>
-<li>Visual Studio Code</li>
+<li><a href="https://www.python.org/">Python</a> 3.12.2</li>
+<li><a href="https://www.dcmembers.com/jibsen/download/61/">Dina font</a> 2.92</li>
+<li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
 </ul>
 
 </main>
