Synth: dat-ting module - firmware page - wip

--- a/site-files/synth/dat-ting/firmware.html
+++ b/site-files/synth/dat-ting/firmware.html
@@ -32,7 +32,9 @@
 <aside><img src="firmware.png" alt="source code"></aside>
 <p>The <a href="index.html"><em>dat-ting</em> Eurorack module</a> is based on a
 <a href="https://electro-smith.com/products/daisy-seed">Daisy Seed</a> microcontroller board.
-The firmware is open source and is published under the <a href="https://github.com/Len42/dat-ting/blob/main/firmware/LICENSE">MIT license</a>. GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.</p>
+The microcontroller firmware is open source and is published under the
+<a href="https://github.com/Len42/dat-ting/blob/main/firmware/LICENSE">MIT license</a>.
+GitHub repository is <a href="https://github.com/Len42/dat-ting">here</a>.</p>
 
 <h1><a name="building"></a>Building the Firmware</h1>
 
@@ -52,8 +54,9 @@ Clone the repository, including the submodules for the Daisy libraries:</p>
 <kbd>firmware/src</kbd> sub-directory.</p>
 
 <h2>Compile the Firmware</h2>
-<p><a href="https://github.com/electro-smith/DaisyWiki/wiki/1.-Setting-Up-Your-Development-Environment#4a-flashing-the-daisy-via-usb">Here are instructions</a>
-for compiling firmware and downloading it to the Daisy Seed via USB, when using Visual Studio Code for development.</p>
+If you're using Visual Studio Code for development,
+<a href="https://github.com/electro-smith/DaisyWiki/wiki/1.-Setting-Up-Your-Development-Environment#4a-flashing-the-daisy-via-usb">follow these instructions</a>
+to compile the firmware and download it to the Daisy Seed via USB.</p>
 
 <h1><a name="overview"></a>Firmware Overview</h1>
 <p>The firmware for this module is written in C++ using the Daisy Seed libraries
